k8s-deploy/staging/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: parliamentary-questions
  labels:
    app: parliamentary-questions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parliamentary-questions
  template:
    metadata:
      labels:
        app: parliamentary-questions
    spec:
      containers:
      - name: parliamentary-questions-rails-app
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pq-team/parliamentary-questions:latest
        imagePullPolicy: Always
        command: ['sh', '-c', "bundle exec puma -p 3000"]
        ports:
        - containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /ping
        #     port: 80
        # readinessProbe:
        #   httpGet:
        #     path: /healthcheck
        #     port: 4567
