k8s-deploy/staging/ingress-live.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pq-staging
  namespace: parliamentary-questions-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: pq-secrets
    external-dns.alpha.kubernetes.io/set-identifier: pq-staging-parliamentary-questions-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  rules:
    - host: staging.trackparliamentaryquestions.service.gov.uk
      http:
        paths:
          - backend:
              serviceName: parliamentary-questions-service
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - staging.trackparliamentaryquestions.service.gov.uk
      secretName: parliamentary-questions-staging-cert
